--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
 <head>
 <title>Micromouse Simulation</title>
-<script src="http://code.jquery.com/jquery.js"></script>
-<script src="http://underscorejs.org/underscore.js"></script>
+<script src="https://code.jquery.com/jquery.js"></script>
+<script src="https://npmcdn.com/underscore@1.8.3/underscore.js"></script>
 <link rel="stylesheet" href="style.css" />
 </head>
 <body>
